--- a/WebContent/css/skel-noscript.css
+++ b/WebContent/css/skel-noscript.css
@@ -16,13 +16,13 @@
 
 	body {
 	
-		min-width: 800px;
+		min-width: 1800px;
 	}
 
 	.container {
-		width: 800px;
-		margin-left: auto;
-		margin-right: auto;
+		width: 1800px;
+		margin-left: 200px;
+		margin-right:200px;
 	}
 	
 	tr{
