--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -6,6 +6,7 @@
 
 @charset 'UTF-8';
 
+
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
@@ -316,6 +317,7 @@
 
 	#main
 	{
+		height: auto;
 		position: relative;
 		background: #fff url(images/overlay.png) repeat;
 	}
